--- a/MainPage.html
+++ b/MainPage.html
@@ -2,6 +2,7 @@
     <head>
         <title>Housie Coin Picker </title>
         <link rel="stylesheet" href="maincss.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div class="mainpage">
