--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             </div>
             <div class="Mainbottomdiv" id="Mainbottomdiv">
                 <div class="Mainbottomdivsub" id="Mainbottomdivsub"></div>
+                <h1 class="logo">STREET ROWDIES</h1>
+                    <p class="logocap">COIN PICKER</p>
             </div>
         </div>
         <script>
@@ -61,7 +63,7 @@
                     completedNumbers.push(selectedNum);
                     const mainDiv = document.getElementsByClassName('Mainbottomdivsub')[0];
                     const targetDiv = mainDiv.getElementsByClassName(`div${selectedNum}`)[0];
-                    targetDiv.style.backgroundColor = 'green';
+                    targetDiv.style.backgroundColor = '#80ff80';
                     updatePreviousNumber();
                 }
             }
